# BN-Purple-Agent

./: .gitignore  Dockerfile  Dockerfile.test  README.md  amber-manifest.json5  pyproject.toml
src/: agent.py  interpreter.py  llm.py  ml_agent.py  ml_helpers.py  server.py
tests/: conftest.py  test_ml_agent_helpers.py  test_spaceship_titanic_e2e.py
